Tests for getting all products after a given creation date or last modified date runs successfuly.